# ita

./: .gitmodules  CMakeLists.txt
docs/: task1.csv  task2.txt
libs/libstemmer_c-2.2.0/: Makefile
src/: main.c
src/utils/: utils.c  utils.h
